--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
         <div class="producto">
             <img src="./assets/img/servicio-legal.jpg" alt="Asesoría legal">
             <h3>Asesoría Legal</h3>
-            <p>Acompañamiento jurídico completo para tramitar tu ciudadanía italiana.</p>
+            <p>Acompañamiento jurídico completo para tramitar su ciudadanía italiana.</p>
         </div>
 
         <div class="producto">
             <img src="./assets/img/traducciones.jpg" alt="Traducción y apostillado">
             <h3>Traducción y Apostillado</h3>
-            <p>Traducción oficial y apostillado de tus documentos requeridos.</p>
+            <p>Traducción oficial y apostillado de todos los documentos requeridos.</p>
         </div>
 
         <div class="producto">
             <img src="./assets/img/tramites-italia.jpg" alt="Trámite de ciudadanía en Italia">
             <h3>Trámites</h3>
-            <p>Paquete completo para gestionar tu ciudadanía vía judicial o directamente en Italia.</p>
+            <p>Paquete completo para gestionar su ciudadanía por consulado, vía judicial o directamente en Italia.</p>
         </div>
         </div>
     </section>
@@ -132,7 +132,7 @@
         <div class="card">
             <img src="./assets/img/maria-borghesse.jpg" alt="Maria Borghesse" class="foto">
             <h3 class="nombre">Maria Borghesse</h3>
-            <p class="texto">Excelente atención y gran profesionalismo. Asesoría de confianza en la emisión de visas y ciudadanía.</p>
+            <p class="texto">Excelente atención y gran profesionalismo. Asesoría de confianza para llevar a cabo con éxito todos los trámites.</p>
         </div>
         </div>
     </section>
